castai/add-castai-removal-disabled/.kyverno-test/patched02.yaml
apiVersion: batch/v1
kind: CronJob
metadata:
  name: addcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          labels:
            autoscaling.cast.ai/removal-disabled: "true"
        spec:
          containers:
          - name: hello
            image: busybox
            args:
            - /bin/sh
            - -c
            - date; echo Hello from the Kubernetes cluster
          restartPolicy: OnFailure
